--- a/force-app/main/default/classes/LacoreConnect/Brands/Actions/GetBrandAction.cls
+++ b/force-app/main/default/classes/LacoreConnect/Brands/Actions/GetBrandAction.cls
@@ -1,39 +1,44 @@
 public class GetBrandAction {
     @InvocableMethod(label='Get Brand' description='Gets a brand by ID' category='Lacore Connect')
-    public static List<GetBrandResponse> execute(List<GetBrandRequest> requests) {
+    public static List<GetBrandResponse> execute() {        
         List<GetBrandResponse> responses = new List<GetBrandResponse>();
         
-        for (GetBrandRequest request : requests) {
-            try {
-                LacoreConnectService.ApiResponse response = LacoreConnectService.getBrand(request.brandId);
-                responses.add(new GetBrandResponse(response));
-            } catch (Exception e) {
-                throw new AuraHandledException(e.getMessage());
+        try {
+            // Call the service to get the brand
+            LacoreConnectService.ApiResponse apiResponse = LacoreConnectService.getBrand();
+            
+            if (apiResponse.isSuccess) {
+                // Create successful response
+                GetBrandResponse response = new GetBrandResponse();
+                response.success = true;
+                response.data = (BrandDto)JSON.deserialize(apiResponse.body, BrandDto.class);
+                responses.add(response);
+            } else {
+                // Create error response
+                GetBrandResponse response = new GetBrandResponse();
+                response.success = false;
+                response.message = apiResponse.errorMessage;
+                responses.add(response);
             }
+        } catch(Exception e) {
+            // Create error response
+            GetBrandResponse response = new GetBrandResponse();
+            response.success = false;
+            response.message = e.getMessage();
+            responses.add(response);
         }
         
         return responses;
     }
-    
-    public class GetBrandRequest {
-        @InvocableVariable(required=true)
-        public String brandId;
-    }
-    
+
     public class GetBrandResponse {
         @InvocableVariable
         public Boolean success;
         
         @InvocableVariable
         public String message;
-        
+    
         @InvocableVariable
-        public String data;
-        
-        public GetBrandResponse(LacoreConnectService.ApiResponse response) {
-            this.success = response.isSuccess;
-            this.message = response.errorMessage;
-            this.data = response.body;
-        }
+        public BrandDto data;
     }
 } 
